// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button renders correctly button text without hover 1`] = `
<button
  className="sc-bcXHqe sc-gswNZR feNVH gHullA primary-light btn-lg button"
  onClick={[MockFunction]}
  style={
    Object {
      "fontSize": "1.05rem",
      "padding": "0.65rem 1.25rem",
    }
  }
>
  Press me
</button>
`;

exports[`Button renders correctly button text-dark 1`] = `
<button
  className="sc-bcXHqe sc-gswNZR feNVH gHullA primary-light btn-lg button"
  onClick={[MockFunction]}
  style={
    Object {
      "fontSize": "1.05rem",
      "padding": "0.65rem 1.25rem",
    }
  }
>
  Press me
</button>
`;

exports[`Button renders correctly button text-light 1`] = `
<button
  className="sc-bcXHqe sc-gswNZR feNVH gHullA primary-light btn-lg button"
  onClick={[MockFunction]}
  style={
    Object {
      "fontSize": "1.05rem",
      "padding": "0.65rem 1.25rem",
    }
  }
>
  Press me
</button>
`;

exports[`Button renders correctly icon button 1`] = `
<button
  className="sc-bcXHqe sc-gswNZR feNVH gHullA primary-light btn-lg button"
  onClick={[MockFunction]}
  style={
    Object {
      "fontSize": "1.05rem",
      "padding": "0.65rem 1.25rem",
    }
  }
>
  Press me
</button>
`;

exports[`Button renders correctly large size button 1`] = `
<button
  className="sc-bcXHqe sc-gswNZR feNVH gHullA primary-light btn-lg button"
  onClick={[MockFunction]}
  style={
    Object {
      "fontSize": "1.05rem",
      "padding": "0.65rem 1.25rem",
    }
  }
>
  Press me
</button>
`;

exports[`Button renders correctly medium size button 1`] = `
<button
  className="sc-bcXHqe sc-gswNZR feNVH gHullA primary-light btn-md button"
  onClick={[MockFunction]}
  style={
    Object {
      "fontSize": "0.9500000000000001rem",
      "padding": "0.5850000000000001rem 1.125rem",
    }
  }
>
  Press me
</button>
`;

exports[`Button renders correctly primary-dark button 1`] = `
<button
  className="sc-bcXHqe sc-gswNZR feNVH gHullA primary-light btn-lg button"
  onClick={[MockFunction]}
  style={
    Object {
      "fontSize": "1.05rem",
      "padding": "0.65rem 1.25rem",
    }
  }
>
  Press me
</button>
`;

exports[`Button renders correctly primary-light button 1`] = `
<button
  className="sc-bcXHqe sc-gswNZR feNVH gHullA primary-light btn-lg button"
  onClick={[MockFunction]}
  style={
    Object {
      "fontSize": "1.05rem",
      "padding": "0.65rem 1.25rem",
    }
  }
>
  Press me
</button>
`;

exports[`Button renders correctly secondary-dark button 1`] = `
<button
  className="sc-bcXHqe sc-gswNZR feNVH gHullA primary-light btn-lg button"
  onClick={[MockFunction]}
  style={
    Object {
      "fontSize": "1.05rem",
      "padding": "0.65rem 1.25rem",
    }
  }
>
  Press me
</button>
`;

exports[`Button renders correctly secondary-light button 1`] = `
<button
  className="sc-bcXHqe sc-gswNZR feNVH gHullA primary-light btn-lg button"
  onClick={[MockFunction]}
  style={
    Object {
      "fontSize": "1.05rem",
      "padding": "0.65rem 1.25rem",
    }
  }
>
  Press me
</button>
`;

exports[`Button renders correctly small size button 1`] = `
<button
  className="sc-bcXHqe sc-gswNZR feNVH gHullA primary-light btn-sm button"
  onClick={[MockFunction]}
  style={
    Object {
      "fontSize": "0.8500000000000001rem",
      "padding": "0.52rem 1rem",
    }
  }
>
  Press me
</button>
`;
